@@ -17,6 +17,9 @@ Trunk (unreleased changes)
  4. HADOOP-586.  Use the jar name for otherwise un-named jobs.
     (Sanjay Dahiya via cutting)
 
+ 5. HADOOP-514.  Make DFS heartbeat interval configurable.
+    (Milind Bhandarkar via cutting)
+
 
 Release 0.7.1 - 2006-10-11
 
